# cot-investigation-public

./: .gitignore  README.md  TODO.md  aliases.sh  docker-compose.yml  interesting-examples.md  pyrightconfig.json  ssh_tunnels.md
analysis/: cot_analysis.py  pyproject.toml  quick_script.py  repl.py  unfaithful_secondary_evals.csv
analysis/queries/: 003_cot_paths_for_secondary_eval_experiment.sql  cot_trie_eval_experiment_insert.sql  tries_with_incorrect_step.sql
backend/: .gitignore  Dockerfile  aliases.sh  pyproject.toml  requirements.txt  test_cot_instr.py  test_local.py  vscode_poetry_kernel_instructions.md
backend/app/: alt_secondary_evaluation_service.py  main.py
backend/app/data_structures/: buffered_cot_stream.py  cot_path.py  cot_trie.py  cot_trie_builder.py
backend/app/models/: __init__.py  completion.py  cot_path.py  cot_trie.py  experiment.py  gsm8k.py  gsm8k_cot.py  gsm8k_cot_step.py  gsm8k_cot_step_eval.py  language_model.py  problem.py
backend/app/services/: README.md  anthropic_service.py  local_model_service.py  model_service.py  ollama_service.py  openai_service.py  (+2 more)
backend/assets/: gemma_tries.json  struck_problems.csv  unfaithful_secondary_evals.csv
backend/experiments/: secondary_eval_experiment.py
backend/migrations/: env.py
backend/plans/: 001_refactor_datasets_plan.md
backend/scripts/: add_node_ids_to_tries.py  analyze_incorrect_paths.py  backpopulate_cot_paths.py  collect_cot_responses.py  collect_cot_tries.py  compare_transformer_lens_vs_ollama.py  evaluate_cot_steps.py  export_random_tries.py  find_unfaithful_correct_paths.py  fix_path_unfaithfulness.py  import_dataset.py  import_math_dataset.py  load_gsm8k.py  migrate_gsm8k_to_problems.py  parse_cot_steps.py  process_trie_secondary_evals.py
(+36 files in other folders)
