[tool.poetry]
name = "chainofthought"
version = "0.1.0"
description = "Chain of thought investigation backend"
authors = ["Your Name <your.email@example.com>"]
package-mode  = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
aiokafka = "^0.8.1"
anthropic = "^0.40.0"
datasets = "^3.1.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
asyncio = "^3.4.3"
scipy = "^1.14.1"
alembic = "^1.14.0"
greenlet = "^3.1.1"
tqdm = "^4.66.1"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
